[tool.poetry]
name = "sanji"
version = "0.2.0"
description = "Repository to maintain a personal gitHub page deployment using mkdocs."
authors = ["prateek11rai <prateek11rai@protonmail.com>"]
license = "CC0 1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
mkdocs = "^1.6.1"
mkdocs-material = {extras = ["imaging"], version = "^9.6.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
